Fix Lucide icon alignment

--- a/src/app.scss
+++ b/src/app.scss
@@ -114,7 +114,3 @@ input[type='search'] {
 		);
 	}
 }
-
-.lucide-icon {
-	translate: 0 -2px;
-}
